<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#26c6da"
    tools:context=".PlayerSetup">

    <TextView
        android:id="@+id/playerOneHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playerOneHint"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/firstPlayerName"
        app:layout_constraintEnd_toEndOf="@+id/firstPlayerName"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="@+id/firstPlayerName" />

    <TextView
        android:id="@+id/playerTwoHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playerTwoHint"
        app:layout_constraintBottom_toTopOf="@+id/secondPlayerName"
        app:layout_constraintEnd_toEndOf="@+id/secondPlayerName"
        app:layout_constraintStart_toStartOf="@+id/secondPlayerName" />

    <Button
        android:id="@+id/startGameBtn"
        android:onClick="onClickSendNamesToGameDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/startGameBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondPlayerName" />

    <EditText
        android:id="@+id/firstPlayerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/firstPlayerName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setUpNameTxt" />

    <EditText
        android:id="@+id/secondPlayerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/seconPlayerName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstPlayerName" />

    <TextView
        android:id="@+id/setUpNameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/setUpNameTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>